# PanicAtTheSchool

./: .gitignore  Overtime-Table 1.csv  README.md  crimes.csv  pyproject.toml
CAPP_project/: __main__.py  dash_app.py  pending_to_dos.txt  test.py
CAPP_project/analysis_plots/: __main__.py  dash_app.py  exploratory_plots.py  maps.py  plots.py
CAPP_project/data_wrangling/: __main__.py  clean_data.py  exp_teacher_jaro.py  exp_teacher_mobility_jaro.py  exploratory_merge.py  merge_data.py  teacher_sch.py
CAPP_project/raw_data/: crime_api.py
Raw_Data/: crime_api_pull.py
analysis_plots/: dash_app.py  maps.py  plots.py
analysis_plots/exploratory_analysis/: correlation_table.csv  reg_PCA_exp.py
data_wrangling/: clean_data.py  clean_merge.py  merge_data.py  teacher_sch.py
data_wrangling/bucket_1_ep/: clean_demographic.py  clean_functions.py  normalized_demog.csv
data_wrangling/cleaned_data/: attend_id_crime.csv  avg_attend.csv  clean_attendance.csv  clean_school_admin.csv  clean_teacher.csv  crime_by_ward.csv  schoolid_ward_map.csv  suspension_attendance.csv  suspension_crime.csv  suspension_data.csv
data_wrangling/merged_data/: all_school_merged.csv  attend_by_crime.csv  avg_suspension_crime.csv  school_demo_merged.csv  suspension_attendance.csv
raw_data/: admin_demog.csv  crime_api.py  crimes.csv
raw_data/budget_data_ep/: FY_21_22_budget_data.csv
raw_data/demographic_data_ep/: cmap_detailed_demographic_data.csv
raw_data/health_data_ep/: COVID-19_Cases__Tests__and_Deaths_by_ZIP_Code.csv  health_indicators_atlas_v2.csv  health_indicators_data_dict_v2.csv
(+64 files in other folders)
