[tool.poetry]
name = "panicattheschool"
version = "0.1.0"
description = ""
authors = ["Amari Bauer <baueramari@cs.uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sodapy = "^2.2.0"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
