[tool.poetry]
name = "panicattheschool"
version = "0.1.0"
description = ""
authors = ["Amari Bauer <baueramari@cs.uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sodapy = "^2.2.0"
python-dotenv = "^0.21.1"
pandas = "^1.5.3"
black = "^23.1.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
plotly = "^5.13.0"
dash = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
